# waffle

./: CMakeLists.txt
debian/: changelog  control  copyright  libwaffle-dev.install
doc/release-notes/: waffle-next.txt
man/: wflinfo.1.xml
src/utils/: Android.mk  CMakeLists.txt  wflgears.c  wflgears.h  wflgears_legacy.c  wflinfo.c  wutils.c  wutils.h
src/waffle/: CMakeLists.txt
src/waffle/cgl/: cgl_config.m
src/waffle/core/: wcore_config_attrs.c  wcore_config_attrs.h
src/waffle/egl/: wegl_config.c  wegl_context.c  wegl_display.c  wegl_platform.c
src/waffle/glx/: glx_config.c  glx_context.c
